# eurodent2

./: .env.example  .env.production.example  .gitignore  ARRANCAR.bat  CHECKLIST_PRODUCCION.md  COPIA_PRODUCCION_DESKTOP.md  CUMPLIMIENTO_NORMATIVO.md  PARAR.bat  README.md  ROADMAP_REFACTOR.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile.dev  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_verifactu_fields.py  0003_salud_paciente.py  0004_documentos_paciente.py  0005_laboratorio.py  0006_seguridad_clinica_y_eventos_sif.py  0007_fix_default_uuid_eventos_sif.py  0008_cadenas_integridad_logs.py  0009_auth_sessions.py  0010_registros_facturacion_sif.py  0011_backfill_registros_facturacion.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  citas.py  doctores.py  documentos.py  facturas.py  laboratorio.py  pacientes.py  pdf.py  presupuestos.py  reportes.py  tratamientos.py
backend/app/core/: audit.py  crypto.py  http_security.py  permissions.py  security.py  tamper_chain.py  throttling.py
backend/app/models/: __init__.py  audit_log.py  auth_session.py  base.py  cita.py  consentimiento.py  doctor.py  documento.py  entidad.py  factura.py  gabinete.py  historial.py  horario.py  laboratorio.py  paciente.py  presupuesto.py  referencia.py  tratamiento.py  (+3 more)
backend/scripts/: init_extensions.sql  seed_admin.py  seed_data.py  seed_demo.py  seed_lista_clinica.py  seed_tratamientos.py
backend/tests/: conftest.py  test_auth.py
(+75 files in other folders)
